Enhanced the frontend and backend with better practice / code organization. Generated directions, but claude to implement it all, so hopefully it is done well and a facet to industry standards.
Squashed commit of the following:

commit 38e6cfa4e47635b72a4b694bf089bf6eaacefeea
Author: 2lar
Date:   Sun Aug 3 21:13:00 2025 -0700

    cleaning up the backend to make sure it follows clean architecture.

    Will follow up with better practice and keeping up to make this the embodiment of best practices

commit a046f6a4df980547e7482b80928f4da5fec16ef1
Author: 2lar
Date:   Sun Aug 3 20:13:31 2025 -0700

    Cleanup of the frontend to make sure that it is following better code organization and to learn from

commit 153b29fbe7de544eca66c239a22c6e3fc2b306ff
Author: 2lar
Date:   Sun Aug 3 16:15:12 2025 -0700

    updating the connected nodes in details and descriptions to components

commit 86aba99f1c09ba8809531e03cc2c8bff3a8a16c6
Author: 2lar
Date:   Sun Aug 3 10:55:36 2025 -0700

    starting to add enhancements to B2

    - to start having categories/tags
    - to start having llms and autocategorization
    - hierarchal support of categories
    - to really start llm integration
